--- a/components/package.json
+++ b/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "component-angular",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^13.2.0",
