--- a/package.json
+++ b/package.json
@@ -30,11 +30,20 @@
     "@angular/cli": "~13.2.4",
     "@angular/compiler-cli": "~13.2.0",
     "@types/gulp-less": "^0.0.32",
+    "@types/gulp-postcss": "^8.0.2",
+    "@types/gulp-rename": "^2.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/less": "^3.0.3",
     "@types/node": "^12.11.1",
+    "@types/resolve-bin": "^0.4.1",
+    "autoprefixer": "^10.4.2",
+    "cssnano": "^5.1.0",
     "cz-conventional-changelog": "^3.3.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -42,6 +51,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^13.0.0",
+    "postcss": "^8.4.7",
+    "postcss-preset-env": "^7.4.1",
+    "resolve-bin": "^1.0.0",
     "typescript": "~4.5.2"
   },
   "config": {
