--- a/angular.json
+++ b/angular.json
@@ -1,39 +1,145 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "components": {
-      "projectType": "library",
-      "root": "components",
-      "sourceRoot": "components",
-      "prefix": "five",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
-            "project": "components/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "components/tsconfig.lib.prod.json"
-            },
-            "development": {
-              "tsConfig": "components/tsconfig.lib.json"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+        "components": {
+            "projectType": "library",
+            "root": "components",
+            "sourceRoot": "components",
+            "prefix": "five",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "project": "components/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "components/tsconfig.lib.prod.json"
+                        },
+                        "development": {
+                            "tsConfig": "components/tsconfig.lib.json"
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "components/test.ts",
+                        "tsConfig": "components/tsconfig.spec.json",
+                        "karmaConfig": "components/karma.conf.js"
+                    }
+                }
             }
-          },
-          "defaultConfiguration": "production"
         },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "components/test.ts",
-            "tsConfig": "components/tsconfig.spec.json",
-            "karmaConfig": "components/karma.conf.js"
-          }
+        "site-doc": {
+            "projectType": "application",
+            "schematics": {
+                "@schematics/angular:component": {
+                    "style": "less"
+                },
+                "@schematics/angular:application": {
+                    "strict": true
+                }
+            },
+            "root": "projects/site-doc",
+            "sourceRoot": "projects/site-doc/src",
+            "prefix": "app",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:browser",
+                    "options": {
+                        "outputPath": "dist/site-doc",
+                        "index": "projects/site-doc/src/index.html",
+                        "main": "projects/site-doc/src/main.ts",
+                        "polyfills": "projects/site-doc/src/polyfills.ts",
+                        "tsConfig": "projects/site-doc/tsconfig.app.json",
+                        "inlineStyleLanguage": "less",
+                        "assets": [
+                            "projects/site-doc/src/favicon.ico",
+                            "projects/site-doc/src/assets"
+                        ],
+                        "styles": [
+                            "projects/site-doc/src/styles.less",
+                            "node_modules/github-markdown-css/github-markdown.css",
+                            "node_modules/prismjs/themes/prism.min.css",
+                            "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+                        ],
+                        "scripts": []
+                    },
+                    "configurations": {
+                        "production": {
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "500kb",
+                                    "maximumError": "1mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "2kb",
+                                    "maximumError": "4kb"
+                                }
+                            ],
+                            "fileReplacements": [
+                                {
+                                    "replace": "projects/site-doc/src/environments/environment.ts",
+                                    "with": "projects/site-doc/src/environments/environment.prod.ts"
+                                }
+                            ],
+                            "outputHashing": "all"
+                        },
+                        "development": {
+                            "buildOptimizer": false,
+                            "optimization": false,
+                            "vendorChunk": true,
+                            "extractLicenses": false,
+                            "sourceMap": true,
+                            "namedChunks": true
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "serve": {
+                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "configurations": {
+                        "production": {
+                            "browserTarget": "site-doc:build:production"
+                        },
+                        "development": {
+                            "browserTarget": "site-doc:build:development"
+                        }
+                    },
+                    "defaultConfiguration": "development"
+                },
+                "extract-i18n": {
+                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "options": {
+                        "browserTarget": "site-doc:build"
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/site-doc/src/test.ts",
+                        "polyfills": "projects/site-doc/src/polyfills.ts",
+                        "tsConfig": "projects/site-doc/tsconfig.spec.json",
+                        "karmaConfig": "projects/site-doc/karma.conf.js",
+                        "inlineStyleLanguage": "less",
+                        "assets": [
+                            "projects/site-doc/src/favicon.ico",
+                            "projects/site-doc/src/assets"
+                        ],
+                        "styles": [
+                            "projects/site-doc/src/styles.less"
+                        ],
+                        "scripts": []
+                    }
+                }
+            }
         }
-      }
-    }
-  },
-  "defaultProject": "components"
+    },
+    "defaultProject": "components"
 }
