chore: 移动gulp文件夹

--- a/script/gulp/tsconfig.json
+++ b/script/gulp/tsconfig.json
@@ -12,7 +12,7 @@
             "node"
         ],
         "rootDirs": [
-            "../node_modules/@types"
+            "../../node_modules/@types"
         ]
     },
     "exclude": [
