--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve site-doc",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@types/gulp": "^4.0.9",
+    "github-markdown-css": "^5.1.0",
     "gulp-less": "^5.0.0",
+    "ng-zorro-antd": "^13.1.1",
     "rxjs": "~7.5.0",
     "ts-node": "^10.6.0",
     "tslib": "^2.3.0",
@@ -33,7 +35,9 @@
     "@types/gulp-postcss": "^8.0.2",
     "@types/gulp-rename": "^2.0.1",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "^27.4.1",
     "@types/less": "^3.0.3",
+    "@types/marked": "^4.0.2",
     "@types/node": "^12.11.1",
     "@types/resolve-bin": "^0.4.1",
     "autoprefixer": "^10.4.2",
@@ -50,11 +54,16 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "marked": "^4.0.12",
     "ng-packagr": "^13.0.0",
+    "node-prismjs": "^0.1.2",
     "postcss": "^8.4.7",
     "postcss-preset-env": "^7.4.1",
+    "prismjs": "^1.27.0",
+    "remark": "^13.0.0",
     "resolve-bin": "^1.0.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "yaml-front-matter": "^4.1.1"
   },
   "config": {
     "commitizen": {
