--- a/components/package.json
+++ b/components/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "component-angular",
-  "version": "0.0.2",
-  "peerDependencies": {
-    "@angular/common": "^13.2.0",
-    "@angular/core": "^13.2.0"
-  },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  }
+    "name": "component-angular",
+    "version": "0.0.2",
+    "peerDependencies": {
+        "@angular/common": "^13.2.0",
+        "@angular/core": "^13.2.0",
+        "ng-zorro-antd": "^13.1.1"
+    },
+    "dependencies": {
+        "tslib": "^2.3.0"
+    }
 }
