build: 添加ng-zorro依赖

--- a/components/tsconfig.lib.json
+++ b/components/tsconfig.lib.json
@@ -6,10 +6,7 @@
         "declaration": true,
         "declarationMap": true,
         "inlineSources": true,
-        "types": [],
-        "paths": {
-            "component-angular/*": ["./*"]
-        }
+        "types": []
     },
     "exclude": [
         "test.ts",
